--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@angular/router": "~11.2.7",
     "@angular/service-worker": "~11.2.7",
     "@ngx-pwa/local-storage": "^11.1.0",
+    "localforage": "^1.9.0",
     "merge": "^2.1.1",
     "ng-particles": "^2.7.2",
     "ng-zorro-antd": "^11.4.0",
