--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,10 +9,10 @@
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
-    "target": "esnext",
+    "target": "es2015",
     "module": "es2020",
     "lib": [
-      "esnext",
+      "es2018",
       "dom"
     ],
     "paths": {
@@ -37,14 +37,20 @@
       "ngx-bit/directive": [
         "projects/ngx-bit/directive/public-api.ts"
       ],
-      "ngx-bit/factory": [
-        "projects/ngx-bit/factory/public-api.ts"
-      ],
       "ngx-bit/operates": [
         "projects/ngx-bit/operates/public-api.ts"
       ],
       "ngx-bit/pipe": [
         "projects/ngx-bit/pipe/public-api.ts"
+      ],
+      "ngx-bit/router": [
+        "projects/ngx-bit/router/public-api.ts"
+      ],
+      "ngx-bit/storage": [
+        "projects/ngx-bit/storage/public-api.ts"
+      ],
+      "ngx-bit/swal": [
+        "projects/ngx-bit/swal/public-api.ts"
       ],
       "ngx-howler": [
         "projects/ngx-howler/src/public-api.ts"
