--- a/projects/ngx-bit/tsconfig.lib.json
+++ b/projects/ngx-bit/tsconfig.lib.json
@@ -6,8 +6,7 @@
     "target": "es2015",
     "declaration": true,
     "inlineSources": true,
-    "types": [
-    ],
+    "types": [],
     "lib": [
       "dom",
       "es2018"
