--- a/projects/ngx-bit/package.json
+++ b/projects/ngx-bit/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-bit",
-  "version": "11.4.0",
+  "version": "12.0.0-beta",
   "schematics": "./schematics/collection.json",
   "dependencies": {
     "tslib": "^2.0.0",
