ng update @angular/cli

--- a/package.json
+++ b/package.json
@@ -2,16 +2,16 @@
   "name": "ngx-bit-case",
   "scripts": {
     "start": "ng serve --host 0.0.0.0 --port 4201 --disable-host-check",
-    "build": "ng build --prod",
-    "build:ngx-bit": "ng build ngx-bit --prod && npm run build:schematics && npm run postbuild",
+    "build": "ng build --configuration production",
+    "build:ngx-bit": "ng build ngx-bit --configuration production && npm run build:schematics && npm run postbuild",
     "release:ngx-bit": "cd dist/ngx-bit && npm publish",
     "build:schematics": "tsc -p projects/ngx-bit/tsconfig.schematics.json",
     "copy:schemas": "cpy --parents projects/ngx-bit/schematics/*/schema.json dist/ngx-bit/",
     "copy:collection": "cpy projects/ngx-bit/schematics/collection.json dist/ngx-bit/schematics",
     "postbuild": "npm run copy:schemas && npm run copy:collection",
-    "build:framework": "ng build framework --prod",
+    "build:framework": "ng build framework --configuration production",
     "release:framework": "cd dist/framework && npm publish --access=public",
-    "build:cms": "ng build cms --prod",
+    "build:cms": "ng build cms --configuration production",
     "release:cms": "cd dist/cms && npm publish --access=public",
     "test": "ng test ngx-bit --no-watch --no-progress --browsers=ChromeHeadlessCI",
     "lint": "ng lint",
@@ -35,14 +35,14 @@
     "ng-zorro-antd": "^11.4.0",
     "ngx-tinymce": "^11.0.0",
     "rxjs": "~6.6.7",
-    "tslib": "^2.0.0",
+    "tslib": "^2.3.0",
     "tsparticles": "^1.24.2",
     "uuid": "^8.3.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1102.6",
-    "@angular/cli": "~11.2.6",
+    "@angular-devkit/build-angular": "~12.1.1",
+    "@angular/cli": "~12.1.1",
     "@angular/compiler-cli": "~12.1.1",
     "@angular/language-service": "~12.1.1",
     "@types/d3": "^6.3.0",
@@ -55,12 +55,12 @@
     "cpy-cli": "^3.1.1",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "^5.1.1",
+    "karma": "^6.3.4",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "^2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "ng-packagr": "^11.0.3",
+    "ng-packagr": "^12.1.0",
     "prettier": "^2.3.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
