--- a/projects/ngx-bit/package.json
+++ b/projects/ngx-bit/package.json
@@ -4,12 +4,11 @@
   "schematics": "./schematics/collection.json",
   "dependencies": {
     "tslib": "^2.0.0",
-    "@ngx-pwa/local-storage": "^11.1.0"
+    "@ngx-pwa/local-storage": "^12.0.0"
   },
   "peerDependencies": {
-    "@angular/common": "^11.0.0",
-    "@angular/core": "^11.0.0",
-    "ng-zorro-antd": "^11.0.0"
+    "@angular/common": "^12.0.0",
+    "@angular/core": "^12.0.0"
   },
   "keywords": [
     "angular",
