--- a/projects/ngx-bit/package.json
+++ b/projects/ngx-bit/package.json
@@ -1,14 +1,14 @@
 {
   "name": "ngx-bit",
-  "version": "12.0.0-beta",
+  "version": "12.0.0-beta.2",
   "schematics": "./schematics/collection.json",
   "dependencies": {
-    "tslib": "^2.0.0",
-    "@ngx-pwa/local-storage": "^12.0.0"
+    "tslib": "^2.0.0"
   },
   "peerDependencies": {
     "@angular/common": "^12.0.0",
-    "@angular/core": "^12.0.0"
+    "@angular/core": "^12.0.0",
+    "@ngx-pwa/local-storage": "^12.0.0"
   },
   "keywords": [
     "angular",
