--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
-  "name": "ngx-bit-case",
+  "name": "ngx-bit-example",
+  "version": "12.0.0",
+  "private": true,
   "scripts": {
     "start": "ng serve --host 0.0.0.0 --port 4201 --disable-host-check",
     "build": "ng build --configuration production",
@@ -19,7 +21,6 @@
     "deploy": "npm run build && python utils/deploy.py",
     "deploy:dependency": "pip install cos-python-sdk-v5 tencentcloud-sdk-python"
   },
-  "private": true,
   "dependencies": {
     "@angular/animations": "~12.1.1",
     "@angular/common": "~12.1.1",
@@ -31,40 +32,36 @@
     "@angular/router": "~12.1.1",
     "@angular/service-worker": "~12.1.1",
     "@ngx-pwa/local-storage": "^12.0.0",
-    "ng-particles": "^2.7.2",
-    "ng-zorro-antd": "^11.4.2",
-    "ngx-tinymce": "^12.0.0",
-    "rxjs": "~6.6.7",
-    "tslib": "^2.3.0",
-    "tsparticles": "^1.24.2",
-    "uuid": "^8.3.2",
+    "ng-zorro-antd": "^12.0.0",
+    "rxjs": "~6.6.0",
+    "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.1.1",
+    "@angular-eslint/builder": "12.2.2",
+    "@angular-eslint/eslint-plugin": "12.2.2",
+    "@angular-eslint/eslint-plugin-template": "12.2.2",
+    "@angular-eslint/schematics": "12.2.2",
+    "@angular-eslint/template-parser": "12.2.2",
     "@angular/cli": "~12.1.1",
     "@angular/compiler-cli": "~12.1.1",
-    "@angular/language-service": "~12.1.1",
-    "@types/d3": "^6.3.0",
-    "@types/howler": "^2.2.2",
     "@types/jasmine": "~3.6.0",
-    "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
-    "codelyzer": "^6.0.0",
-    "coveralls": "^3.1.0",
-    "cpy-cli": "^3.1.1",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "^6.3.4",
+    "@typescript-eslint/eslint-plugin": "4.23.0",
+    "@typescript-eslint/parser": "4.23.0",
+    "eslint": "^7.26.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
+    "eslint-plugin-prettier": "^3.4.0",
+    "jasmine-core": "~3.7.0",
+    "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "^2.0.3",
+    "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "ng-packagr": "^12.1.0",
-    "prettier": "^2.3.0",
-    "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~4.3.5"
+    "prettier": "^2.3.2",
+    "typescript": "~4.3.2"
   }
 }
