--- a/projects/ngx-bit/package.json
+++ b/projects/ngx-bit/package.json
@@ -1,31 +1,11 @@
 {
   "name": "ngx-bit",
-  "version": "12.0.0-beta.2",
-  "schematics": "./schematics/collection.json",
-  "dependencies": {
-    "tslib": "^2.0.0"
-  },
+  "version": "0.0.1",
   "peerDependencies": {
-    "@angular/common": "^12.0.0",
-    "@angular/core": "^12.0.0",
-    "@ngx-pwa/local-storage": "^12.0.0"
+    "@angular/common": "^12.1.1",
+    "@angular/core": "^12.1.1"
   },
-  "keywords": [
-    "angular",
-    "ng-zorro",
-    "ngx"
-  ],
-  "author": {
-    "name": "kain",
-    "email": "zhangtqx@vip.qq.com"
-  },
-  "license": "BSD-3-Clause License",
-  "homepage": "https://doc.kainonly.com/#/ngx-bit/",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/kainonly/ngx-bit.git"
-  },
-  "bugs": {
-    "url": "https://github.com/kainonly/ngx-bit/issues"
+  "dependencies": {
+    "tslib": "^2.2.0"
   }
 }
