--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,23 +29,27 @@
       "ngx-bit/pipe": ["projects/ngx-bit/pipe/public-api.ts"],
       "ngx-bit/router": ["projects/ngx-bit/router/public-api.ts"],
       "ngx-bit/swal": ["projects/ngx-bit/swal/public-api.ts"],
-      "@vanx/framework": ["projects/framework/public-api.ts"],
-      "@vanx/framework/component": ["projects/framework/component/public-api.ts"],
-      "@vanx/framework/layout": ["projects/framework/layout/public-api.ts"],
-      "@vanx/framework/login": ["projects/framework/login/public-api.ts"],
-      "@vanx/framework/profile": ["projects/framework/profile/public-api.ts"],
-      "@vanx/framework/acl": ["projects/framework/acl/public-api.ts"],
-      "@vanx/framework/resource": ["projects/framework/resource/public-api.ts"],
-      "@vanx/framework/role": ["projects/framework/role/public-api.ts"],
-      "@vanx/framework/user": ["projects/framework/user/public-api.ts"],
-      "@vanx/framework/permission": ["projects/framework/permission/public-api.ts"],
-      "@vanx/framework/security": ["projects/framework/security/public-api.ts"],
-      "@vanx/cms": ["projects/cms/public-api.ts"],
-      "@vanx/cms/component": ["projects/cms/component/public-api.ts"],
-      "@vanx/cms/media": ["projects/cms/media/public-api.ts"],
-      "@vanx/cms/schema": ["projects/cms/schema/public-api.ts"],
-      "@vanx/cms/template": ["projects/cms/template/public-api.ts"],
-      "@mock/*": ["mock/*"]
+      "@vanx/framework": [
+        "projects/vanx/framework/public-api.ts",
+        "dist/vanx/framework/vanx-framework",
+        "dist/vanx/framework"
+      ],
+      "@vanx/framework/component": ["projects/vanx/framework/component/public-api.ts"],
+      "@vanx/framework/layout": ["projects/vanx/framework/layout/public-api.ts"],
+      "@vanx/framework/login": ["projects/vanx/framework/login/public-api.ts"],
+      "@vanx/framework/profile": ["projects/vanx/framework/profile/public-api.ts"],
+      "@vanx/framework/acl": ["projects/vanx/framework/acl/public-api.ts"],
+      "@vanx/framework/resource": ["projects/vanx/framework/resource/public-api.ts"],
+      "@vanx/framework/role": ["projects/vanx/framework/role/public-api.ts"],
+      "@vanx/framework/user": ["projects/vanx/framework/user/public-api.ts"],
+      "@vanx/framework/permission": ["projects/vanx/framework/permission/public-api.ts"],
+      "@vanx/framework/security": ["projects/vanx/framework/security/public-api.ts"],
+      "@vanx/cms": ["projects/vanx/cms/public-api.ts", "dist/vanx/cms/vanx-cms", "dist/vanx/cms"],
+      "@vanx/cms/component": ["projects/vanx/cms/component/public-api.ts"],
+      "@vanx/cms/media": ["projects/vanx/cms/media/public-api.ts"],
+      "@vanx/cms/schema": ["projects/vanx/cms/schema/public-api.ts"],
+      "@vanx/cms/template": ["projects/vanx/cms/template/public-api.ts"],
+      "@mock/*": ["resource/mock/*"]
     }
   },
   "angularCompilerOptions": {
