--- a/package.json
+++ b/package.json
@@ -32,9 +32,12 @@
     "@angular/router": "~12.1.1",
     "@angular/service-worker": "~12.1.1",
     "@ngx-pwa/local-storage": "^12.0.0",
+    "ng-particles": "^2.14.1",
     "ng-zorro-antd": "^12.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
+    "tsparticles": "^1.31.1",
+    "uuid": "^8.3.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
