--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@ngx-pwa/local-storage": "^12.0.0",
     "ng-particles": "^2.14.1",
     "ng-zorro-antd": "^12.0.0",
+    "ngx-tinymce": "^12.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "tsparticles": "^1.31.1",
@@ -51,6 +52,7 @@
     "@angular/compiler-cli": "~12.1.1",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
+    "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "4.23.0",
     "@typescript-eslint/parser": "4.23.0",
     "eslint": "^7.26.0",
