--- a/projects/ngx-bit/.eslintrc.json
+++ b/projects/ngx-bit/.eslintrc.json
@@ -4,8 +4,9 @@
   "overrides": [
     {
       "files": ["*.ts"],
+      "excludedFiles": ["**/*.spec.ts"],
       "parserOptions": {
-        "project": ["./tsconfig.lib.json", "./tsconfig.spec.json"],
+        "project": ["./tsconfig.lib.json"],
         "createDefaultProgram": true
       },
       "rules": {
