--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@angular-eslint/template-parser": "12.2.2",
     "@angular/cli": "~12.1.1",
     "@angular/compiler-cli": "~12.1.1",
+    "@angular/language-service": "^12.1.1",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "@types/uuid": "^8.3.1",
