--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ngx-bit-example",
   "version": "0.0.0-NOT-USED",
   "scripts": {
-    "start": "ng serve --host 0.0.0.0 --port 4201 --disable-host-check",
+    "start": "ng serve",
     "build": "ng build --configuration production",
     "build:ngx-bit": "ng build ngx-bit --configuration production",
     "release:ngx-bit": "cd dist/ngx-bit && npm publish",
